# eaisi-uwv

./: .gitignore  CONTEXT.md  README.md  config.py  data_overview.txt  main.py  pyproject.toml  pyrightconfig.json  run_overnight.py  summarize_runs.py
.claude/: settings.local.json
code/: 85919NED data cleaning and EDA.ipynb  Data exploration_80072ned_v1.ipynb  Data exploration_v2.ipynb  Data_visualization.ipynb  baseline_model.ipynb  config.py  data_loader.py  data_loader_bronze.py  data_loader_gold.py  data_loader_raw.py  data_loader_silver.py  data_pipelines.py  data_preparation.py  data_understanding.py  model_trainer.py  nb_timeseries_model.ipynb  uwv_functions.py  visualize_bronze.py
code/utils/: m_nb_results_to_gold_export.py  m_query_database.py
data/0_raw/: CaribbeanNetherlands.json  DataProperties.json  Periods.json  PersonalCharacteristics.json  TableInfos.json
data/1_bronze/: bronze_data.db  dc-uwv-80072ned.pkl
data/2_silver/: silver_data.db
data/4_eval/: eval_data.db  eval_data.db-shm  eval_data.db-wal
data/feature_selection/: column_origin.json  feature_catalog.json  preset_all.json  preset_basic.json  preset_basic_conditions.json  (+3 more)
reports/: experiment_matrix.csv  per_sector_metrics.csv  sector_quality.csv
src/: config.py
tests/: test_config.py  test_data_loader_bronze.py  test_data_loader_gold.py  test_data_loader_raw.py  test_data_loader_silver.py  test_m_evaluation.py  test_m_model_viz.py  test_m_pipeline_loader_families.py  test_m_sector_quality.py  test_main.py  test_ml_1_data_extraction.py  test_ml_2_data_validation.py  test_ml_3_data_preparation.py  test_ml_4_model_training.py  test_ml_5_model_evaluation.py  test_ml_6_model_validation.py  test_ml_7_model_inference.py  test_ml_orchestrator.py  test_model_configs.py  test_model_evaluation.py  test_model_orchestrator.py  test_model_preprocess.py  test_model_registry.py  test_model_training.py  test_sbi_classifier.py
(+125 files in other folders)
