[project]
name = "eaisi-uwv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cbsodata>=1.3.5",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.0",
    "polars>=1.38.0",
    "sqlalchemy>=2.0.45",
    "seaborn>=0.13.2",
]
