[project]
name = "eaisi-uwv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cbsodata>=1.3.5",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.0",
    "polars>=1.38.0",
    "sqlalchemy>=2.0.45",
    "seaborn>=0.13.2",
    "pyarrow>=23.0.1",
    "statsmodels>=0.14.6",
    "mlflow>=3.10.1",
    "skops>=0.13.0",
]

[project.scripts]
mlflow-ui = "src.utils.m_mlflow_ui:start_server"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
